2004-01-24  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook-migrate.c (migrate_local_folders): use
	e_folder_map_local_folders.
	(find_addressbook_dirs): nuke.

2004-01-24  JP Rosevear <jpr@ximian.com>

	* gui/widgets/e-addressbook-view.c (init_collection): use
	.evolution to store view info

2004-01-23  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #52571 ]
	* util/eab-book-util.c (escape): ugh.  name fields that have \"
	around the name break our queries, because it turns it into (for
	instance): (contains "full_name" ""Toshok"").  so we need to turn
	that into: (contains "full_name" "\"Toshok\"").
	(eab_name_and_email_query): escape both the name and email, and
	use an EBookQuery instead of passing the string to
	e_book_async_get_contacts.  Looks like ross missed a couple of
	spots.
	(eab_nickname_query): same.

	* gui/component/addressbook.c (free_load_source_data): new
	function, free up the data and unref the source if there is one.
	(load_source_auth_cb): call free_load_source_data instead of just
	g_free'ing the struct.
	(load_source_cb): same.
	(default_book_cb): new function, we need this so we can fill in
	the source for the default book.  get the source, then call
	load_source_cb to continue processing as normal.
	(addressbook_load_default_book): use default_book_cb instead of
	load_source_cb.

2004-01-22  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #53184 ]
	* gui/component/addressbook-migrate.c (migrate_contacts): handle
	the fact that the xml 1.4 spits out contains unescaped ';'s in the
	EMAIL attributes for mailing lists.

2004-01-22  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #52944 ]
	* gui/component/addressbook-migrate.c (migrate_contacts): do some
	massaging of contacts as we import them, to fix up the differences
	between 1.4 and 1.5 vcards.

2004-01-21  Nat Friedman <nat@novell.com>

	* gui/contact-editor/contact-editor.glade: Added missing
	entry-blog widget.

2004-01-21  Hans Petter Jansson  <hpj@ximian.com>
