@@ -1,5 +1,11 @@
 2004-01-24  Chris Toshok  <toshok@ximian.com>
 
+	* gui/component/addressbook-migrate.c (migrate_local_folders):
+	don't create/add the source here.  it's done in
+	migrate_contact_folder.
+
+2004-01-24  Chris Toshok  <toshok@ximian.com>
+
 	* gui/component/addressbook-migrate.c (migrate_local_folders): use
 	e_folder_map_local_folders.
 	(find_addressbook_dirs): nuke.
